--- a/src/main/resources/templates/Create/createGig.html
+++ b/src/main/resources/templates/Create/createGig.html
@@ -92,8 +92,7 @@
                                         <input type="file" th:field="*{gigArt}"/>
                                     </div>
                                     <div class="file-path-wrapper">
-                                        <input id="gigArt" class="file-path validate" type="text"/>
-                                        <label for="gigArt">Upload Gig Image</label>
+                                        <input class="file-path validate" type="text" placeholder="Upload Gig Image"/>
                                     </div>
                                 </div>
                             </div>
