--- a/src/main/resources/templates/Create/createMusician.html
+++ b/src/main/resources/templates/Create/createMusician.html
@@ -91,7 +91,7 @@
                                             <input type="file" th:field="*{profPicImage}"/>
                                         </div>
                                         <div class="file-path-wrapper">
-                                            <input class="file-path validate" type="text"/>
+                                            <input class="file-path validate" type="text" placeholder="Upload Profile Image"/>
                                         </div>
                                     </div>
                                 </div>
