--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -82,6 +82,8 @@
 
                 <a sec:authorize="isAuthenticated()" href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
+                    <div sec:authorize="isAuthenticated()">
+
                         <li><a href="/search">Search</a></li>
                         <li><a  th:href="@{/find-gigs}">Find a Gig</a></li>
                         <li><a  th:href="@{/find-bands}">Find a Band</a></li>
@@ -90,11 +92,13 @@
                                 [[${user.username}]] <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${companyProfile.companyProfPic}} " class="navAvatar circle"/>
                                 <i class="material-icons right">arrow_drop_down</i></a>
                         </li>
-                    <li sec:authorize="hasRole('ROLE_MUSICIAN')" >
-                        <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
-                            [[${user.username}]] <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${musicianProfile.profPicImage}} " class="navAvatar circle"/>
-                            <i class="material-icons right">arrow_drop_down</i></a>
-                    </li>
+                        <li sec:authorize="hasRole('ROLE_MUSICIAN')" >
+                            <a class="dropdown-button valign-wrapper" href="#!" data-activates="dropdown1" data-constrainwidth="false" th:inline="text">
+                                [[${user.username}]] <img th:src="@{'https://s3.amazonaws.com/s3-gigfinder/' + ${musicianProfile.profPicImage}} " class="navAvatar circle"/>
+                                <i class="material-icons right">arrow_drop_down</i></a>
+                        </li>
+                    </div>
+
                     <li sec:authorize="!isAuthenticated()"><a  class="modal-trigger logBtn" href="#signupModal" style="margin-right: 0px;">Login</a></li>
                 </ul>
 
